project-base/kubernetes/kustomize/overlays/production/ingress-patch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: shopsys
    annotations:
        kubernetes.io/ingress.class: nginx
        ingress.kubernetes.io/ssl-redirect: "False"
spec:
    tls:
        -   hosts:
            secretName: domain-1-ssl-certificates
        -   hosts:
            secretName: domain-2-ssl-certificates
